--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,16 @@
-language: clojure
+sudo: false
+language: java
+script: ./test.sh
+jdk:
+  - oraclejdk8
+  - openjdk7
+install:
+  - mkdir -p ~/bin
+  - export PATH=~/bin:$PATH
+  - curl -L https://github.com/boot-clj/boot-bin/releases/download/latest/boot.sh -o ~/bin/boot
+  - chmod +x ~/bin/boot
+cache:
+  directories:
+  - $HOME/.m2
+  - $HOME/.boot/cache
+  - $HOME/bin
